@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add key_value 'no_mood_change' that when set to 1 on a monster
+prevents spells like charm or pacify to have any effect.
+Nicolas Weeger 2010-09-04
+
 Don't join party again at startup if formed automatically.
 This leads to party removal, and memory corruption.
 Nicolas Weeger 2010-09-02
